fixed initialisation of dead time values

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,39 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Application to configure and visualise timers. Support for Atmel atmega328p (e.g Arduino Uno, Nano, Pro-mini) and Logic Green lgt8f328p. PWM, FPWM, CTC, PCPWM, PFCPWM, Interrupts, Dead Time, Prescalers, Capture and more."
     />
+
+    <!-- open graph -->
+    <meta property="og:title" content="Arduino Web Timers" />
+    <meta property="og:site_name" content="Arduino Web Timers" />
+    <meta
+      property="og:url"
+      content="https://dbuezas.github.io/arduino-web-timers/"
+    />
+    <meta
+      property="og:description"
+      content="Application to configure and visualise timers. Support for Atmel atmega328p (e.g Arduino Uno, Nano, Pro-mini) and Logic Green lgt8f328p. PWM, FPWM, CTC, PCPWM, PFCPWM, Interrupts, Dead Time, Prescalers, Capture and more."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://dbuezas.github.io/arduino-web-timers/screenshot.png"
+    />
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Arduino Web Timers" />
+    <meta name="twitter:site" content="@dbuezas" />
+    <meta
+      name="twitter:description"
+      content="Application to configure and visualise timers. Support for Atmel atmega328p (e.g Arduino Uno, Nano, Pro-mini) and Logic Green lgt8f328p. PWM, FPWM, CTC, PCPWM, PFCPWM, Interrupts, Dead Time, Prescalers, Capture and more."
+    />
+    <meta
+      name="twitter:image"
+      content="https://dbuezas.github.io/arduino-web-timers/screenshot.png"
+    />
+    <meta name="twitter:image:alt" content="Arduino Web Timers" />
+    <!--  -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +55,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Arduino Web Timers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
