--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Arduino Web Timers</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-56HJ5FG09Z"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-56HJ5FG09Z')
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
