--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-56HJ5FG09Z"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LJ3T72M5WK"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || []
       function gtag() {
@@ -69,7 +74,7 @@
       }
       gtag('js', new Date())
 
-      gtag('config', 'G-56HJ5FG09Z')
+      gtag('config', 'G-LJ3T72M5WK')
     </script>
   </head>
   <body>
