lodash file import

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=.5" />
     <meta name="theme-color" content="#000000" />
+    <link href="bundle.css" rel="stylesheet" />
+    <script defer src="bundle.js"></script>
+
     <meta
       name="description"
       content="Application to configure and visualise timers. Support for Atmel atmega328p (e.g Arduino Uno, Nano, Pro-mini) and Logic Green lgt8f328p. PWM, FPWM, CTC, PCPWM, PFCPWM, Interrupts, Dead Time, Prescalers, Capture and more."
@@ -40,12 +43,12 @@
     />
     <meta name="twitter:image:alt" content="Arduino Web Timers" />
     <!--  -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
